# pixiengine

./: CMakeLists.txt
example/: CMakeLists.txt
example/src/: main.c
framework/: CMakeLists.txt
framework/include/sr/: app.h  error.h  pixel.h  sprite.h
framework/src/: app.c  app_private.h  platform.c  platform_private.h  sprite.c  sprite_private.h
gl/: CMakeLists.txt
gl/src/: Shader.cxx  Shader.hxx  main.cxx
sr/: CMakeLists.txt
sr/include/sr/: app.h  error.h  pixel.h  sprite.h
sr/src/: app.c  pixel.c  platform.c  sprite.c  sprite_private.h
tinyrender/: CMakeLists.txt
tinyrender/src/: benchmark.c  line.c  line.h  tiny_render.c  utils.h
